--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="wrapper">
         <div class="header">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <div class="fixed-top">
@@ -37,22 +37,24 @@
             </div>
         </div>
 
-        <div class="card" style="width: 960px">
-            <div class="card-body">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm">
-                            <h1 class="subject">About Me</h1>
+        <div class="container-fluid">
+            <div class="card">
+                <div class="card-body">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-sm">
+                                <h1 class="subject">About Me</h1>
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm">
-                            <img class="profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" width=250px height=200px>
-                    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam unde in alias, porro animi eius et sit?</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>    
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>       
-                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <div class="row">
+                            <div class="col-sm">
+                                <img class="profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" width=250px height=200px>
+                        
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam unde in alias, porro animi eius et sit?</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>    
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>       
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
