--- a/contact.html
+++ b/contact.html
@@ -12,40 +12,61 @@
 
 <body>
     
-    <div class="header">
-        <nav class="navbar fixed-top bg-light">
-            <a class="navbar-brand" href="#">Taylor Zlomke</a>
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                <a class="nav-link active" href="#">About Me</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="wrapper">
+        <div class="header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col">
+                        <div class="fixed-top">
+                            <nav class="navbar fixed-top">
+                                <a class="navbar-brand" href="#">Taylor Zlomke</a>
+                                <ul class="nav justify-content-center">
+                                    <li class="nav-item">
+                                    <a class="nav-link active" href="#">About Me</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">Portfolio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm">
+                            <h1 class="subject">Contact</h1>
+                        </div>
+                    </div>
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Name</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Email</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">Message</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                    </form>
+                    <input class="btn btn-primary" type="submit" value="Submit">
+                </div>
+            </div>
+        </div>
     </div>
 
-    <div class="card" style="width: 960px">
-    <h1>Contact</h1>
-    <form>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-    </form>
-    <input class="btn btn-primary" type="submit" value="Submit">
     </div>
 
 </body>
