added portfolio items

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm">
-                                <img class="profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" width=250px height=200px>
+                                <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" width=250px height=200px>
                         
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam unde in alias, porro animi eius et sit?</p>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>    
