--- a/contact.html
+++ b/contact.html
@@ -6,37 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    
-    <div class="wrapper">
-        <div class="header">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col">
-                        <div class="fixed-top">
-                            <nav class="navbar fixed-top">
-                                <a class="navbar-brand" href="#">Taylor Zlomke</a>
-                                <ul class="nav justify-content-center">
-                                    <li class="nav-item">
+
+
+    <div class="header">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <div class="fixed-top">
+                        <nav class="navbar fixed-top">
+                            <h1 class="navbar-brand">Taylor Zlomke</h1>
+                            <ul class="nav justify-content-center">
+                                <li class="nav-item">
                                     <a class="nav-link active" href="#">About Me</a>
-                                    </li>
-                                    <li class="nav-item">
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="#">Portfolio</a>
-                                    </li>
-                                    <li class="nav-item">
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="#">Contact</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
     <div class="container-fluid">
         <div class="card">
@@ -54,7 +55,7 @@
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlInput1">Email</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
                         </div>
                         <div class="form-group">
                             <label for="exampleFormControlTextarea1">Message</label>
@@ -67,6 +68,11 @@
         </div>
     </div>
 
+
+    <div class="container-fluid">
+        <div class="footer">
+            <footer class="copy">Copyright ©</footer>
+        </div>
     </div>
 
 </body>
