--- a/index.html
+++ b/index.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About Me</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
-    <div class="wrapper">
-        <div class="header">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col">
-                        <div class="fixed-top">
-                            <nav class="navbar fixed-top">
-                                <a class="navbar-brand" href="#">Taylor Zlomke</a>
-                                <ul class="nav justify-content-center">
-                                    <li class="nav-item">
-                                    <a class="nav-link active" href="#">About Me</a>
-                                    </li>
-                                    <li class="nav-item">
-                                    <a class="nav-link" href="#">Portfolio</a>
-                                    </li>
-                                    <li class="nav-item">
-                                    <a class="nav-link" href="#">Contact</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
+    <div class="header">
         <div class="container-fluid">
-            <div class="card">
-                <div class="card-body">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm">
-                                <h1 class="subject">About Me</h1>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-sm">
-                                <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" width=250px height=200px>
-                        
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam unde in alias, porro animi eius et sit?</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>    
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>       
-                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                            </div>
-                        </div>
+            <div class="row">
+                <div class="col">
+                    <div class="fixed-top">
+                        <nav class="navbar fixed-top">
+                            <h1 class="navbar-brand">Taylor Zlomke</h1>
+                            <ul class="nav justify-content-center">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#">About Me</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Portfolio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="push"></div>
     </div>
 
-    <div class="footer">
-        <p class="copy">Copyright ©</p>
+    <div class="container-fluid">
+        <div class="card">
+            <div class="card-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm">
+                            <h1 class="subject">About Me</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture"
+                                width=250px height=200px>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas
+                                quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam
+                                unde in alias, porro animi eius et sit?</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident
+                                temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod
+                                aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.</p>
+                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="footer">
+            <footer class="copy">Copyright ©</footer>
+        </div>
     </div>
 
 
 </body>
+
 </html>
