--- a/portolio.html
+++ b/portolio.html
@@ -112,15 +112,13 @@
                 </div>
             </div>
         </div>
-
-        <div class="push"></div>
     </div>
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
         <div class="footer">
             <footer class="copy">Copyright ©</footer>
         </div>
-    </div>
+    <!-- </div> -->
 
 </body>
 
