made images responsive. removed footer

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm">
-                            <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture"
-                                width=250px height=200px>
+                            <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture">
 
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas
                                 quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam
@@ -59,7 +58,7 @@
                                 temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod
                                 aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua.</p>
+                                incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet.</p>
                             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                                 ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
                                 esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -69,10 +68,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="footer">
-        <footer class="copy">Copyright ©</footer>
     </div>
 
 </body>
