--- a/portolio.html
+++ b/portolio.html
@@ -53,7 +53,7 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid" src="assets/images/placeholder_img1.jpeg" alt="Hangman"
+                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img1.jpeg" alt="Hangman"
                                         width=275 height=200 class="imagelink"></a>
                                 <div class="text">
                                     <p>Hangman</p>
@@ -63,7 +63,7 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid" src="assets/images/placeholder_img2.jpeg" alt="RPG Game"
+                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img2.jpeg" alt="RPG Game"
                                         width=275 height=200 class="imagelink"></a>
                                 <div class="text">
                                     <p>RPG Game</p>
@@ -77,7 +77,7 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid" src="assets/images/placeholder_img3.jpeg" alt="Trivia"
+                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img3.jpeg" alt="Trivia"
                                         width=275 height=200 class="imagelink"></a>
                                 <div class="text">
                                     <p>Trivia</p>
@@ -87,7 +87,7 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid" src="assets/images/placeholder_img4.jpeg" alt="DU Info Widget"
+                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img4.jpeg" alt="DU Info Widget"
                                         width=275 height=200 class="imagelink"></a>
                                 <div class="text">
                                     <p>DU Info Widget</p>
@@ -100,7 +100,7 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid" src="assets/images/placeholder_img5.jpeg" alt="Rock Paper Scissors"
+                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img5.jpeg" alt="Rock Paper Scissors"
                                         width=275 height=200 class="imagelink"></a>
                                 <div class="text">
                                     <p>Rock Paper Scissors</p>
@@ -114,11 +114,6 @@
         </div>
     </div>
 
-    <!-- <div class="container-fluid"> -->
-        <div class="footer">
-            <footer class="copy">Copyright ©</footer>
-        </div>
-    <!-- </div> -->
 
 </body>
 
