responsive image update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm">
-                            <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture">
+                            <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" height=200px width=250px>
 
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas
                                 quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam
