fixed content area on small devices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="header">
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
             <div class="row">
                 <div class="col">
                     <div class="fixed-top">
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <div class="card">
             <div class="card-body">
                 <div class="container-fluid">
@@ -67,6 +67,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="fixed-bottom">
+        <div class="footer">
+            <footer class="copy">Copyright ©</footer>
         </div>
     </div>
 
