--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 
     <div class="header">
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
             <div class="row">
                 <div class="col">
                     <div class="fixed-top">
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid px-0">
         <div class="card">
             <div class="card-body">
                 <div class="container-fluid">
@@ -68,6 +68,11 @@
         </div>
     </div>
 
+    <div class="fixed-bottom">
+        <div class="footer">
+            <footer class="copy">Copyright ©</footer>
+        </div>
+    </div>
 
 </body>
 
