fixed navbar for small devices

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="container-fluid px-0">
             <div class="row">
-                <div class="col">
+                <div class="col-sm">
                     <div class="fixed-top">
                         <nav class="navbar fixed-top">
                             <h1 class="navbar-brand">Taylor Zlomke</h1>
@@ -49,20 +49,24 @@
                     </div>
                     <div class="row">
                         <div class="col-sm">
-                            <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture" height=200px width=250px>
+                            <div class="col-12 px-0">
+                                <img class="img-fluid profpic" src="assets/images/profile_pic3.png" alt="Profile Picture">
+                            </div>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas
-                                quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam
-                                unde in alias, porro animi eius et sit?</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident
-                                temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod
-                                aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet.</p>
-                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <div class="col-12 pl-0">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda quasi voluptas
+                                    quis. Repellendus ipsa atque esse ducimus libero commodi, similique tempore aperiam
+                                    unde in alias, porro animi eius et sit?</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti provident
+                                    temporibus non illo quasi expedita dolore saepe voluptatem nulla recusandae quod
+                                    aperiam, facilis ea assumenda ad! Perferendis, laboriosam quas.</p>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet.</p>
+                                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                                    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
