deleted duplicate classes on portfolio images

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,8 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img1.jpeg" alt="Hangman"
-                                        width=275 height=200 class="imagelink"></a>
+                                <a href="#"><img class="image-fluid portfolio-item image-link" src="assets/images/placeholder_img1.jpeg" alt="Hangman"
+                                        width=275 height=200></a>
                                 <div class="text">
                                     <p>Hangman</p>
                                 </div>
@@ -63,8 +63,8 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img2.jpeg" alt="RPG Game"
-                                        width=275 height=200 class="imagelink"></a>
+                                <a href="#"><img class="image-fluid portfolio-item image-link" src="assets/images/placeholder_img2.jpeg" alt="RPG Game"
+                                        width=275 height=200></a>
                                 <div class="text">
                                     <p>RPG Game</p>
                                 </div>
@@ -77,8 +77,8 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img3.jpeg" alt="Trivia"
-                                        width=275 height=200 class="imagelink"></a>
+                                <a href="#"><img class="image-fluid portfolio-item image-link" src="assets/images/placeholder_img3.jpeg" alt="Trivia"
+                                        width=275 height=200></a>
                                 <div class="text">
                                     <p>Trivia</p>
                                 </div>
@@ -87,8 +87,8 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img4.jpeg" alt="DU Info Widget"
-                                        width=275 height=200 class="imagelink"></a>
+                                <a href="#"><img class="image-fluid portfolio-item image-link" src="assets/images/placeholder_img4.jpeg" alt="DU Info Widget"
+                                        width=275 height=200></a>
                                 <div class="text">
                                     <p>DU Info Widget</p>
                                 </div>
@@ -100,8 +100,8 @@
 
                         <div class="col-sm-4 right-buffer bottom-buffer">
                             <div class="pic">
-                                <a href="#"><img class="image-fluid portfolio-item" src="assets/images/placeholder_img5.jpeg" alt="Rock Paper Scissors"
-                                        width=275 height=200 class="imagelink"></a>
+                                <a href="#"><img class="image-fluid portfolio-item image-link" src="assets/images/placeholder_img5.jpeg" alt="Rock Paper Scissors"
+                                        width=275 height=200></a>
                                 <div class="text">
                                     <p>Rock Paper Scissors</p>
                                 </div>
